Bugfix: Performance - Method invokes inefficient Number constructor; use static valueOf instead.
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/eSciDocCore@40157 5c398c58-3d0a-0410-a38c-d0825f6816e0