@@ -139,7 +139,7 @@ public class ReportDefinitionStaxHandler extends DefaultHandler {
             } else {
                 reportDefinition.setName(s);
             }
-            charactersCounter.put(element.getLocalName(), new Integer(1));
+            charactersCounter.put(element.getLocalName(), Integer.valueOf(1));
         }
         else if ("sql".equals(element.getLocalName())) {
             if (s != null) {
@@ -151,7 +151,7 @@ public class ReportDefinitionStaxHandler extends DefaultHandler {
                     reportDefinition.setSql(s);
                 }
             }
-            charactersCounter.put(element.getLocalName(), new Integer(1));
+            charactersCounter.put(element.getLocalName(), Integer.valueOf(1));
         }
         return s;
     }
